--- a/app/src/main/res/layout/activity_film_form.xml
+++ b/app/src/main/res/layout/activity_film_form.xml
@@ -148,19 +148,17 @@
 
             <FrameLayout
                 android:id="@+id/flFilmImage"
-                android:layout_width="220dp"
-                android:layout_height="320dp"
+                android:layout_width="match_parent"
+                android:layout_height="250dp"
                 android:layout_marginStart="20dp"
-                android:layout_gravity="center"
                 android:layout_marginTop="40dp"
                 android:layout_marginEnd="20dp"
                 android:layout_marginBottom="20dp">
 
                 <ImageView
                     android:id="@+id/ivFilm"
-                    android:layout_width="220dp"
-                    android:layout_height="320dp"
-                    android:layout_gravity="center"
+                    android:layout_width="350dp"
+                    android:layout_height="250dp"
                     android:contentDescription="Klik untuk menambahkan gambar film"
                     android:scaleType="centerCrop"
                     android:src="@drawable/ic_addpict"
@@ -281,7 +279,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
-                android:layout_marginBottom="300dp"
+                android:layout_marginBottom="330dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
                 android:orientation="horizontal">
@@ -306,13 +304,15 @@
                     android:text="Save"
                     android:textColor="@color/white" />
 
+                <ProgressBar
+                    android:id="@+id/progressBar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:visibility="gone" />
             </LinearLayout>
-
-            <ProgressBar
-                android:id="@+id/progressBar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:visibility="gone" />
         </LinearLayout>
     </ScrollView>
 
