--- a/app/src/main/res/layout/activity_bioskop_form.xml
+++ b/app/src/main/res/layout/activity_bioskop_form.xml
@@ -175,6 +175,7 @@
                     android:layout_marginEnd="8dp"
                     android:layout_weight="1"
                     android:backgroundTint="@color/grey"
+                    android:textColor="@color/white"
                     android:text="Cancel" />
 
                 <Button
