--- a/app/src/main/res/layout/item_film.xml
+++ b/app/src/main/res/layout/item_film.xml
@@ -42,7 +42,8 @@
             android:id="@+id/filmBioskop"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="7dp"
+            android:layout_marginBottom="10dp"
             android:ellipsize="end"
             android:maxLines="2"
             android:text="Bioskop"
@@ -57,10 +58,11 @@
             android:id="@+id/filmHarga"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="7dp"
+            android:layout_marginBottom="10dp"
             android:ellipsize="end"
             android:maxLines="1"
-            android:text="Rp 50.000"
+            android:text="Rp50.000"
             android:textColor="@color/primary"
             android:textSize="14sp"
             android:textStyle="bold"
