--- a/app/src/main/res/layout/item_films.xml
+++ b/app/src/main/res/layout/item_films.xml
@@ -70,30 +70,32 @@
             android:layout_width="60dp"
             android:layout_height="40dp"
             android:layout_marginTop="6dp"
-            android:text="Edit"
-            android:textSize="12sp"
+            android:layout_marginBottom="3dp"
+            android:backgroundTint="@color/primary"
             android:paddingStart="8dp"
             android:paddingEnd="8dp"
-            android:backgroundTint="@color/primary"
+            android:text="Edit"
             android:textColor="@color/white"
-            app:layout_constraintTop_toBottomOf="@id/filmHarga"
+            android:textSize="12sp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            />
+            app:layout_constraintTop_toBottomOf="@id/filmHarga" />
 
         <Button
             android:id="@+id/btnDelete"
             android:layout_width="60dp"
             android:layout_height="40dp"
             android:layout_marginTop="6dp"
-            android:text="Delete"
-            android:textSize="12sp"
+            android:layout_marginBottom="3dp"
+            android:backgroundTint="@color/red"
             android:paddingStart="8dp"
             android:paddingEnd="8dp"
-            android:backgroundTint="@color/red"
+            android:text="Delete"
             android:textColor="@color/white"
-            app:layout_constraintTop_toBottomOf="@id/filmHarga"
+            android:textSize="12sp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            />
+            app:layout_constraintTop_toBottomOf="@id/filmHarga" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
